alteracao no backgroundImage e nas cores

--- a/config.json
+++ b/config.json
@@ -1,18 +1,18 @@
 {
-    "name": "Aluracord - Matrix",
+    "name": "Aluracord - Geek by Aliny Kelly",
     "theme": {
         "colors": {
             "primary": {
-                "050": "#E3F9E5",
-                "100": "#C1EAC5",
-                "200": "#A3D9A5",
-                "300": "#7BC47F",
-                "400": "#57AE5B",
-                "500": "#3F9142",
-                "600": "#2F8132",
-                "700": "#207227",
-                "800": "#0E5814",
-                "900": "#05400A"
+                "050": "#F9EEFC",
+                "100": "#EDCBF6",
+                "200": "#E7B9F3",
+                "300": "#E1A8F0",
+                "400": "#CB6CE6",
+                "500": "#B62EDC",
+                "600": "#480F57",
+                "700": "#390C46",
+                "800": "#2B0934",
+                "900": "#1D0623"
             },
             "neutrals": {
                 "000": "#FFFFFF",
